--- a/bower.json
+++ b/bower.json
@@ -9,13 +9,13 @@
     "backbone.wreqr": "~1.3.1",
     "backbone.picky": "~0.2.0",
     "backbone.marionette": "~2.1.0",
-
     "jquery": "~2.1.0",
     "jquery.cookie": "~1.4.1",
-
     "font-awesome": "~4.1.0",
     "bootstrap": "~3.2.0",
-
     "lodash": "~2.4.1"
+  },
+  "devDependencies": {
+    "backfire": "~0.5.0"
   }
 }
