--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "backbone.babysitter": "./client/bower_components/backbone.babysitter/lib/backbone.babysitter.js",
     "backbone.marionette": "./client/bower_components/backbone.marionette/lib/backbone.marionette.js",
     "backbone.picky": "./client/bower_components/backbone.picky/lib/backbone.picky.js",
-    "backbone.queryparams": "./client/bower_components/backbone-query-parameters/backbone.queryparams-1.1-shim.js"
+    "backbone.queryparams": "./client/bower_components/backbone-query-parameters/backbone.queryparams-1.1-shim.js",
+    "jquery.mixitup": "./client/bower_components/mixitup2/src/jquery.mixitup.js"
   },
   "browserify": {
     "transform": [
@@ -35,6 +36,7 @@
     "gulp-autoprefixer": "~0.0.9",
     "gulp-changed": "~0.4.1",
     "gulp-coffeelint": "~0.3.4",
+    "gulp-connect": "^2.2.0",
     "gulp-imagemin": "~0.6.2",
     "gulp-less": "~1.3.5",
     "gulp-notify": "~1.4.2",
