--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "backfire": "~0.5.0",
-    "mixitup2": "~2.1.7"
+    "mixitup2": "~2.1.7",
+    "select2": "~3.5.2"
   }
 }
